--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button id="main-btn" type="button" class="btn-main">Subscribe to monthly newsletter</button>
       </section>
       <section>
-        <img src="/assets/images/illustration-sign-up-desktop.svg">
+        <img src="/assets/images/illustration-sign-up-desktop.SVG">
       </section>
     </article>
     <article class="thanks-article">
