Update index.html image path

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <button id="main-btn" type="button" class="btn-main">Subscribe to monthly newsletter</button>
       </section>
       <section>
-        <img src="/assets/images/illustration-sign-up-desktop.SVG">
+        <img src="./assets/images/illustration-sign-up-desktop.svg">
       </section>
     </article>
     <article class="thanks-article">
-        <img src="/assets/images/icon-success.svg" alt="">
+        <img src="./assets/images/icon-success.svg" alt="">
         <h1>Thanks for subscribing!</h1>
         <p>A confirmation email has been sent to <strong>"Example@gmail.com"</strong>. Please open it and click the button inside to confirm your subscription</p>
         
