Update index.html added alt to imgs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <article class="enter-email-article">
       <section class="mobile-img">
-        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
+        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="illustration">
       </section>
       <section class="left-section">
         <h1>Stay updated!</h1>
@@ -32,7 +32,7 @@
         <button id="main-btn" type="button" class="btn-main">Subscribe to monthly newsletter</button>
       </section>
       <section class="dt-image">
-        <img src="./assets/images/illustration-sign-up-desktop.svg">
+        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="illustration">
       </section>
     </article>
     <article class="thanks-article">
